--- a/src/styles.scss
+++ b/src/styles.scss
@@ -107,6 +107,7 @@ section {
 }
 body {
   line-height: 1;
+  transition: 0.5s;
 }
 ol,
 ul {
@@ -195,7 +196,7 @@ img {
   height: 18px;
   left: 0;
   position: absolute;
-  transition: 0.2s;
+  transition: 0.5s;
   width: 20px;
 }
 
@@ -229,25 +230,31 @@ img {
 .coin__title {
   display: block;
   margin-left: 8px;
-    min-width: 160px;
-text-align: left;
+  min-width: 160px;
+  text-align: center;
+  font-size: 3rem;
 }
 
 .coin__symbol {
   display: block;
+  margin-top: 10px;
   margin-bottom: 10px;
+  font-size: 1.5rem;
 }
 
 .coin__logo {
   width: 50px;
+  margin-bottom: 10px;
 }
 
 .dark-mode {
   color: #fff;
   background-color: #313843;
-
+  transition: 0.5s;
+  
   .navbar {
     background-color: #1F2022;
     border: none;
+    box-shadow: 0px 2px 15px -8px rgba(240, 240, 240, 0.42);
   }
 }
